[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.139.2",
    "markdown-it-py>=4.2.0",
    "mcp[cli]==2.0.0b1",
    "mistralai>=2.7.0",
    "numpy>=2.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
    "uvicorn>=0.51.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
